--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Waste Flow" />
     <!-- <meta name="author" content="Lovable" /> -->
  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="/images/logo.png">
     <!-- TODO: Update og:title to match your application name -->
     <!-- <meta property="og:title" content="Lovable App" />
     <meta property="og:description" content="Lovable Generated Project" />
